--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@
     --bg-color: #080808;
     --second-bg-color: #131313;
     --text-color: white;
-    --main-color: #00ffee;
+    /* --main-color: #00ffee; */
+    --main-color: #ffbb00;
+    
 }
 html {
     font-size: 62.5%;
@@ -193,7 +195,7 @@ span {
     position: relative;
 }
 .text-animation span::before{
-    content: "Web Developer";
+    content: "Full Stack Web Developer";
     color: var(--main-color);
     animation: words 20s infinite;
 }
@@ -208,4 +210,56 @@ span {
     animation: cursor 0.6s infinite
             , typing 20s steps(14) infinite;
 }
+@keyframes cursor{
+    to{
+        border-left: 2px solid var(--main-color);
+    }
+}
+@keyframes words{
+    0%,
+    20%{
+        content: "Frontend Designer";
+    }
+    21%,
+    40%{
+        content: "Web Developer";
+    }
+    41%,
+    60%{
+        content: "UI / UX Developer";
+    }
+    61%,
+    80%{
+        content: "Web Designer";
+    }
+    81%,
+    100%{
+        content: "Software Tester";
+    }
+}   
+@keyframes typing{
+    10%,
+    15%,
+    30%,
+    35%,
+    50%,
+    55%,
+    70%,
+    75%,
+    90%,
+    95%{
+        width: 0;
+    }
+    5%,
+    20%,
+    25%,
+    40%,
+    45%,
+    60%,
+    65%,
+    80%,
+    85%{
+        width: calc(100% + 8px);
+    }
 
+}
