--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,9 @@ span {
     top: 3rem;
     width: 27vw;
     /* height: 71vh; */
-    aspect-ratio: 1;
-    border-radius: 50%;
+    /* aspect-ratio: 1; */
+    border-radius: 15%;
+    background-color: rgba(199, 83, 5, 0.2); /*color temporal */
     box-shadow: 0 0 25px var(--main-color);
     cursor: pointer;
     transition: 0.4s ease-in-out;
@@ -427,6 +428,15 @@ span {
     border: 3px solid var(--main-color);
     box-shadow: 0 0 25px var(--main-color);
 }
+.projects-box video{
+    width: 30rem;
+    height: 30rem;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 3px solid var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    margin-bottom: 50px;
+}
 .wrapper{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -635,7 +645,7 @@ span {
         border-bottom: 2px solid var(--main-color);
         display: none;
     }
-    .navbar .active{
+    .navbar.active{
         display: block;
     }
     .navbar a{
