--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ span {
 
 }
 .home-content p {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.8;
     max-width: 700px;
@@ -373,7 +373,7 @@ span {
 }
 .service-box{
     background-color: var(--main-color);
-    height: 300px;
+    height: 350px;
     border-radius: 3rem;
     border: 5px solid transparent;
     cursor: pointer;
@@ -629,6 +629,9 @@ span {
     }
 }
 @media(max-width:895px){
+    html{
+        font-size: 60%;
+    }
     #menu-icon{
         display: block;
     }
